--- a/styles/main.scss
+++ b/styles/main.scss
@@ -158,7 +158,7 @@ body {
 .menu {
   display: none;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-direction: column;
   position: fixed;
   width: 200px;
@@ -169,7 +169,14 @@ body {
   border: 2px solid #000;
   box-sizing: border-box;
   padding: 5px 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  text-transform: uppercase;
   z-index: 10;
+  p {
+    margin: 0 auto;
+  }
 }
 
 .contact-widget {
@@ -306,7 +313,8 @@ body {
     border-radius: 10px;
     box-sizing: border-box;
     color: #fff;
-    font-size: 18px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
     line-height: 30px;
     min-width: 100px;
     min-height: 30px;
@@ -473,7 +481,6 @@ body {
 }
 
 .cntr {
-  margin: auto;
   text-align: center;
   overflow: hidden;
   h1 {
@@ -500,6 +507,9 @@ body {
       margin-left: 3px;
       opacity: 0.8;
     }
+  }
+  h2 {
+    font-family: 'Montserrat', sans-serif;
   }
 }
 
@@ -571,15 +581,14 @@ body {
 }
 
 .project-grid-container {
-  // background: #777;
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(8, 1fr);
   max-width: 1000px;
-  // height: 750px;
   max-height: 700px;
-  margin: 0 auto;
+  margin: 0 auto 75px auto;
   padding: 20px;
+  font-family: 'Montserrat', sans-serif;
   // ALLOWS THE BOX SHADOW TO BE UNDER THE IMAGE RATHER THAN ON/ABOVE IT
   &:after {
     content: '';
@@ -600,26 +609,29 @@ body {
     // object-fit: cover;
     width: 100%;
     height: 100%;
-    max-height: 450px;
+    max-height: 425px;
     box-shadow: 0px 35px 27px -20px rgba(0, 0, 0, 0.2), 0px 3px 20px rgba(0, 0, 0, 0.1);
-    // max-height: 400px;
   }
 }
 
 .project-title {
   grid-column: 4 / 11;
   grid-row: 2 / 3;
-  background: yellow;
+  background: rgba(255, 238, 0, 0.9);
   border-radius: 6px;
   display: flex;
   align-items: center;
   justify-content: center;
+  h3 {
+    margin: 0;
+    font-size: 26px;
+  }
 }
 
 .project-desc {
   grid-column: 3 / 10;
   grid-row: 5 / 9;
-  background: rgba(240, 11, 202, 0.9);
+  background: rgba(237, 39, 255, 0.9);
   border-radius: 6px;
   display: flex;
   justify-content: space-between;
@@ -630,6 +642,7 @@ body {
   box-shadow: 0px 35px 27px -20px rgba(0, 0, 0, 0.2), 0px 3px 20px rgba(0, 0, 0, 0.1);
   p {
     margin: 0;
+    line-height: 1.4;
   }
   .icons {
     align-self: flex-end;
@@ -639,6 +652,9 @@ body {
     a {
       text-decoration: none;
       color: #000;
+      &:hover {
+        color: #fff;
+      }
     }
     i {
       height: 40px;
@@ -671,6 +687,28 @@ body {
       letter-spacing: -10px;
     }
   }
+  .projects-display-option {
+    margin: 50px;
+  }
+  .project-image {
+    grid-column: 1 / 8;
+    grid-row: 1 / 6;
+    // z-index: -2;
+    img {
+      width: 100%;
+      height: 100%;
+      max-height: 425px;
+    }
+  }
+  .project-title {
+    h3 {
+      font-size: 22px;
+    }
+  }
+  .project-desc {
+    grid-column: 2 / 10;
+    grid-row: 4 / 9;
+  }
 }
 
 @media screen and (max-width: 775px) {
@@ -680,11 +718,44 @@ body {
       letter-spacing: -8.5px;
     }
   }
+  .project-grid-container {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+    max-width: 1000px;
+    max-height: 700px;
+    margin: 0 auto 75px auto;
+    padding: 20px;
+    font-family: 'Montserrat', sans-serif;
+    // ALLOWS THE BOX SHADOW TO BE UNDER THE IMAGE RATHER THAN ON/ABOVE IT
+    &:after {
+      content: '';
+      grid-column: 4 / 11;
+      grid-row: 2 / 3;
+      border-radius: 12px;
+      z-index: -3;
+      box-shadow: 0px 35px 27px -20px rgba(0, 0, 0, 0.2), 0px 3px 20px rgba(0, 0, 0, 0.1);
+    }
+  }
   .project-image {
+    // grid-column: 1 / 7;
+    grid-row: 1 / 6;
     img {
-      // KEEPS IMG FROM STRETCHING THE FULL HEIGHT OF DEFINED GRID ROW SPECS ABOVE
+      // (USED TO) KEEP IMG FROM STRETCHING THE FULL HEIGHT OF DEFINED GRID ROW SPECS ABOVE
       max-width: 100%;
-      max-height: 75%;
+      max-height: 100%;
+    }
+  }
+  .project-title {
+    h3 {
+      font-size: 18px;
+    }
+  }
+  .project-desc {
+    grid-column: 2 / 10;
+    grid-row: 4 / 9;
+    p {
+      font-size: 14px;
     }
   }
 }
@@ -701,6 +772,17 @@ body {
       font-size: 75px;
       letter-spacing: -11px;
     }
+  }
+  .project-grid-container {
+    grid-template-rows: repeat(10, 1fr);
+  }
+  .project-image {
+    grid-column: 1 / 10;
+    grid-row: 1 / 7;
+  }
+  .project-desc {
+    grid-column: 2 / 9;
+    grid-row: 4 / 11;
   }
 }
 
@@ -728,21 +810,20 @@ body {
     }
   }
   .project-title {
-    // grid-column: 3 / 10;
-  }
-  .project-desc {
-    // grid-column: 3 / 9;
+    grid-column: 2 / 9;
+    grid-row: 2 / 3;
   }
   .project-image {
-    img {
-      // KEEPS IMG FROM STRETCHING THE FULL HEIGHT OF DEFINED GRID ROW SPECS ABOVE
-      max-width: 100%;
-      max-height: 55%;
-    }
+    grid-column: 1 / 11;
+    grid-row: 1 / 7;
+  }
+  .project-desc {
+    grid-column: 2 / 10;
+    grid-row: 4 / 11;
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 515px) {
   .cntr {
     text-align: left;
     h1 {
@@ -750,10 +831,53 @@ body {
       font-size: 40px;
       margin: 5px auto 0 auto;
       letter-spacing: -6px;
-      &:after {
-        border-bottom: 10px solid;
-        margin-top: -10px;
-      }
     }
+    h2 {
+      font-size: 18px;
+    }
+  }
+  .project-grid-container {
+    grid-template-rows: repeat(17, 1fr);
+    padding: 20px 5px;
+    margin: 0 auto 35px auto;
+    max-height: 1000px;
+  }
+  .projects-display-option {
+    margin: 50px 10px 30px 10px;
+  }
+  .project-title {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    text-align: center;
+    h3 {
+      font-size: 16px;
+    }
+  }
+  .project-desc {
+    grid-column: 1 / 11;
+    grid-row: 8 / 18;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  .project-grid-container {
+    grid-template-rows: repeat(17, 1fr);
+    max-height: 1050px;
+  }
+  .project-title {
+    grid-column: 2 / 10;
+    grid-row: 2 / 3;
+    text-align: center;
+    h3 {
+      font-size: 16px;
+    }
+  }
+  .project-image {
+    grid-column: 1 / 11;
+    grid-row: 1 / 5;
+  }
+  .project-desc {
+    grid-column: 1 / 11;
+    grid-row: 6 / 18;
   }
 }
